# micro-services-grpc-rust

./: Cargo.toml  README.md  build.rs
src/: client.rs  server.rs
