[package]
name = "micro-services-grpc-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "payments-server"
path = "src/server.rs"

[[bin]]
name = "payments-client"
path = "src/client.rs"

[dependencies]
# gRPC implementation for rust
tonic = "0.7"
# prost is protocol buffer and implementation for rust
prost = "0.10"
# Aysnc Runtime for the rust
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.7"